# Advent-of-FPGA-2025

./: .gitignore  LICENSE  README.md  solution.py
hardcaml_template_project/: hardcaml_template_project.opam
hardcaml_template_project/generated_rtl/: day1_solution.v  range_finder.v
hardcaml_template_project/src/: day1_solution.ml  day1_solution.mli
hardcaml_template_project/test/: dune  test_day1_solution.ml  test_range_finder.ml
